adjust: correction in html-css and authorization

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,70 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>File Upload</title>
-    <style>
-        body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            background-color: #f2f2f2;
-        }
-
-        .container {
-            text-align: center;
-        }
-
-        h1 {
-            font-size: 32px;
-            color: #333333;
-        }
-
-        form {
-            display: inline-block;
-            margin-top: 20px;
-        }
-
-        .form-group {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            margin-bottom: 10px;
-        }
-
-        .form-group input[type="file"] {
-            margin-right: 10px;
-        }
-
-        .upload-button {
-            display: none;
-            padding: 10px 20px;
-            font-size: 16px;
-            background-color: #4caf50;
-            color: #ffffff;
-            border: none;
-            cursor: pointer;
-        }
-
-        .upload-button:hover {
-            background-color: #45a049;
-        }
-
-        .btn-list {
-            display: block;
-            margin-top: 20px;
-            padding: 10px 20px;
-            font-size: 16px;
-            background-color: #4caf50;
-            color: #ffffff;
-            border: none;
-            cursor: pointer;
-        }
-
-        .btn-list:hover {
-            background-color: #45a049;
-        }
-    </style>
+    <link rel="stylesheet" href="../static/index.css">
 </head>
 <body>
     <div class="container">
