--- a/templates/create_user.html
+++ b/templates/create_user.html
@@ -3,61 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Create User</title>
-    <style>
-        body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            background-color: #f2f2f2;
-            font-family: Arial, sans-serif;
-        }
-
-        .container {
-            text-align: center;
-        }
-
-        h2 {
-            margin-bottom: 20px;
-        }
-
-        form {
-            display: inline-block;
-            text-align: left;
-            margin-top: 20px;
-        }
-
-        div {
-            margin-bottom: 10px;
-        }
-
-        label {
-            font-weight: bold;
-            display: inline-block;
-            width: 100px;
-        }
-
-        input[type="text"],
-        input[type="email"],
-        input[type="password"] {
-            padding: 5px;
-            width: 200px;
-        }
-
-        button[type="submit"] {
-            padding: 10px 20px;
-            font-size: 16px;
-            background-color: #4caf50;
-            color: #ffffff;
-            border: none;
-            cursor: pointer;
-        }
-
-        button[type="submit"]:hover {
-            background-color: #45a049;
-        }
-    </style>
+    <link rel="stylesheet" href="../static/create_user.css">
 </head>
 <body>
     <div class="container">
