--- a/templates/middleware.html
+++ b/templates/middleware.html
@@ -1,61 +1,33 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Middleware</title>
-    <style>
-        body {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-            margin: 0;
-            background-color: #f2f2f2;
-        }
-
-        h1 {
-            text-align: center;
-            margin-bottom: 30px;
-        }
-
-        .button-container {
-            display: flex;
-            justify-content: center;
-            margin-top: 8vh;
-        }
-
-        .button-container button {
-            padding: 10px 40px;
-            font-size: 16px;
-            background-color: #4caf50;
-            color: #ffffff;
-            border: none;
-            cursor: pointer;
-            margin: 0 5px;
-            width: 150px;
-        }
-
-        .button-container button:hover {
-            background-color: #45a049;
-        }
-    </style>
-</head>
-<body>
+    <link rel="stylesheet" href="../static/middleware.css">
+  </head>
+  <body>
     <h1>Your file was successfully uploaded and is being processed...</h1>
     <div class="button-container">
-        <button onclick="redirectToOtherPage()">BALANCE</button>
-        <button onclick="redirectToOtherPage2()">UPLOAD FILE</button>
+      <button onclick="redirectToOtherPage()">BALANCE</button>
+      <button onclick="redirectToOtherPage2()">UPLOAD FILE</button>
     </div>
 
     <script>
-        function redirectToOtherPage() {
-            window.location.href = "/list";
-        }
-        
-        function redirectToOtherPage2() {
-            window.location.href = "/";
-        }
+      const accessToken = localStorage.getItem("access_token");
+
+      if (!accessToken) {
+        window.location.href = "/users/login";
+      }
+
+      function redirectToOtherPage() {
+        // const accessToken = localStorage.getItem("access_token");
+        // if(accessToken) {}
+        window.location.href = "/list";
+      }
+
+      function redirectToOtherPage2() {
+        window.location.href = "/";
+      }
     </script>
-</body>
+  </body>
 </html>
