feature: userhandler tests

--- a/templates/list.html
+++ b/templates/list.html
@@ -43,7 +43,7 @@
           <thead>
             <tr>
               <th>Type</th>
-              <th>Created At</th>
+              <th>Date</th>
               <th>Product</th>
               <th>Value</th>
               <th>Seller</th>
