--- a/templates/login.html
+++ b/templates/login.html
@@ -53,7 +53,7 @@
                 };
             })
             .catch(error => {
-                alert('Failed ');
+                alert('Login Failed');
                 console.log('Error:', error);
             });
         });
