--- a/templates/create_user.html
+++ b/templates/create_user.html
@@ -38,7 +38,7 @@
                 password: formData.get('password')
             };
 
-            fetch('http://localhost:8000/users/', {
+            fetch('http://24.199.71.130/users/', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json'
@@ -49,7 +49,7 @@
                 if (response.ok) {
                     alert('User created successfully!');
                     form.reset();
-                    window.location.href = 'http://localhost:8000/users/login';
+                    window.location.href = 'http://24.199.71.130/users/login';
                 } else {
                     alert('Failed to create user.');
                 }
