--- a/templates/login.html
+++ b/templates/login.html
@@ -35,7 +35,7 @@
                 password: formData.get('password')
             };
 
-            fetch('http://localhost:8000/users/generate_token', {
+            fetch('http://24.199.71.130/users/generate_token', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json'
